---------------------------------------------------------------------------------------------------
Version: 4.1.11
Date: 2021.12.XX
  Changes:
    - Added omni.fluid.add_multi_temp_recipe(recipename) to mark recipes which require a copy with
      sluids for each available temperature in the orginal min/max range of the fluid
  Bugfixes:
    - Fixed that hidden void recipes were not converted into a sluid version
    - If a void recipe for a sluid with multiple temperatures exists, create a void recipe for
      each temperature
---------------------------------------------------------------------------------------------------
Version: 4.1.10
Date: 2021.12.16
  Bugfixes:
    - Fixed a special case where fluid steam in recipes without any specified temperatures was
      replaced with the minimal registered steam temperature instead of with the minimal registered
      boiler target temperature
    - Fixed that steam outputted by recipes that had a temperature that was not matching any
      boiler`s target temperature had no conversion recipe
---------------------------------------------------------------------------------------------------
Version: 4.1.9
Date: 2021.12.14
  Bugfixes:
    - Fixed a crash with modded recipe that have amount = 0 specified for ingredients/results
    - Fixed an issue where solids were not properly generated for fluid with a temperature < 0
    - Be more robust if something in fluid replacement goes wrong.
    - Fixed an issue where solid-fluid items and recipes were missing for fluids that could be
      heated up with boilers
    - Fixed a typo that caused certain solid fluid items to have no localised name
---------------------------------------------------------------------------------------------------
Version: 4.1.8
Date: 2021.12.08
  Features:
    - Added Mining drones compatibility
  Changes:
    - Added omni.fluid.add_assembler_generator_fluid(fluidname) to specify generator fluids that